{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 34,
  "lineage": "ef338121-28b4-f0d5-cd9d-1d47dd04fe9f",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:security-group/sg-0a33a34ee4ee5b55d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a33a34ee4ee5b55d",
            "ingress": [],
            "name": "k8s-pos-venda-master-sg",
            "name_prefix": "",
            "owner_id": "082400896128",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-pos-venda-master-sg"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c3102725023401a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3250679576",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a33a34ee4ee5b55d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_security_group.cluster_master_sg",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_iep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-f63af5c0",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-177-71-153-170.sa-east-1.compute.amazonaws.com",
            "public_ip": "177.71.153.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-pos-venda-eip"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:internet-gateway/igw-00731028c8d41b53d",
            "id": "igw-00731028c8d41b53d",
            "owner_id": "082400896128",
            "tags": {
              "Name": "k8s-pos-venda-internet-gateway"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-internet-gateway"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-f63af5c0",
            "connectivity_type": "public",
            "id": "nat-0a9b278b4659df5eb",
            "network_interface_id": "eni-0196f386fc474ed47",
            "private_ip": "10.0.14.231",
            "public_ip": "177.71.153.170",
            "subnet_id": "subnet-07a3006d7313f04e0",
            "tags": {
              "Name": "k8s-pos-venda-nat-gateway"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00fe79a099d799c031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a9b278b4659df5eb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00fe79a099d799c03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.vpc_iep",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00731028c8d41b53d",
            "id": "r-rtb-042166ecfb43602001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-042166ecfb4360200",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:route-table/rtb-042166ecfb4360200",
            "id": "rtb-042166ecfb4360200",
            "owner_id": "082400896128",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-pos-venda-public-route"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-public-route"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:route-table/rtb-00fe79a099d799c03",
            "id": "rtb-00fe79a099d799c03",
            "owner_id": "082400896128",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "k8s-pos-venda-private-route"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-private-route"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a2faf9443876462",
            "route_table_id": "rtb-00fe79a099d799c03",
            "subnet_id": "subnet-04ff9872aa2f2fd85"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03100babcef7fe883",
            "route_table_id": "rtb-00fe79a099d799c03",
            "subnet_id": "subnet-04d3a6810e36692af"
          },
          "dependencies": [
            "module.network.aws_route_table.nat",
            "module.network.aws_subnet.private_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0f4415e6803e69f",
            "route_table_id": "rtb-042166ecfb4360200",
            "subnet_id": "subnet-07a3006d7313f04e0"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1a",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6aab33838cb5ba7",
            "route_table_id": "rtb-042166ecfb4360200",
            "subnet_id": "subnet-0b68d6f8f845c3110"
          },
          "dependencies": [
            "module.network.aws_route_table.igw_route_table",
            "module.network.aws_subnet.public_subnet_1c",
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:subnet/subnet-04ff9872aa2f2fd85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-04ff9872aa2f2fd85",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082400896128",
            "tags": {
              "Name": "k8s-pos-venda-private-1a",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-private-1a",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:subnet/subnet-04d3a6810e36692af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-04d3a6810e36692af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "082400896128",
            "tags": {
              "Name": "k8s-pos-venda-private-1c",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-private-1c",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:subnet/subnet-07a3006d7313f04e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-07a3006d7313f04e0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082400896128",
            "tags": {
              "Name": "k8s-pos-venda-public-1a",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-public-1a",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:subnet/subnet-0b68d6f8f845c3110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0b68d6f8f845c3110",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082400896128",
            "tags": {
              "Name": "k8s-pos-venda-public-1c",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-public-1c",
              "kubernetes.io/cluster/k8s-pos-venda": "shared"
            },
            "vpc_id": "vpc-05c3102725023401a"
          },
          "dependencies": [
            "module.network.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:082400896128:vpc/vpc-05c3102725023401a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bd638f5fedd46bf",
            "default_route_table_id": "rtb-05301d1b009b35edf",
            "default_security_group_id": "sg-012e9940452900aeb",
            "dhcp_options_id": "dopt-fbf5a59c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05c3102725023401a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05301d1b009b35edf",
            "owner_id": "082400896128",
            "tags": {
              "Name": "k8s-pos-venda-vpc"
            },
            "tags_all": {
              "Name": "k8s-pos-venda-vpc"
            }
          }
        }
      ]
    }
  ]
}